artifacts/e2e/14_stale_boot_recovered_on_restart.sh/20260425T174613Z/log.txt
[scenario] fixture_root=/var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-14-1777139173-60128
==> Locating source agents
==> Creating fixture directories
==> Generating keys with nak
==> Writing backend and CLI config
==> Writing generated agent identities
==> Skipping relay publishing because TENEX_INTEROP_SKIP_PUBLISH=1
[harness] fixture loaded from /var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-14-1777139173-60128
[harness]   backend pubkey:  567ade14ca7677939b8a280902e4cada153488a60c64dc17be70441a622dbcab
[harness]   user pubkey:     3d965662b15f63791e5d6a591f9d57c1e92d626a00d2839e1e98221e7c50d51b
[harness]   agent1 pubkey:   33bbff0373175741b0260aa068ab6b99eafb6ccda6f7a464dd8e603a10bcdc61
[harness]   agent2 pubkey:   60ba4521036b721662de59bc2ff6f57bd131c3abc3ba1167303a1c230d77f336
[harness]   project a-tag:   31933:3d965662b15f63791e5d6a591f9d57c1e92d626a00d2839e1e98221e7c50d51b:nak-interop-test-20260425204613-13000
[harness] starting relay on 127.0.0.1:50581 (admins=1)
[harness] relay ready at ws://127.0.0.1:50581
[harness] daemon config relays -> [ws://127.0.0.1:50581]
connecting to ws://127.0.0.1:50581... ok.
publishing to ws://127.0.0.1:50581... success.
connecting to ws://127.0.0.1:50581... ok.
publishing to ws://127.0.0.1:50581... success.
[harness] starting daemon (TENEX_BASE_DIR=/var/folders/bl/w2vvyf7n0sq2vrh10pg8bd4h0000gn/T//tenex-e2e-14-1777139173-60128/backend)
[harness] daemon log tail:
  --> crates/tenex-daemon/src/daemon_signals.rs:12:17
   |
12 | use std::path::{Path, PathBuf};
   |                 ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> crates/tenex-daemon/src/daemon_loop.rs:451:25
    |
444 |                     let result = run_started_worker_session_from_filesystem(
    |                                  ------------------------------------------ arguments to this function are incorrect
...
451 |                         publish_enqueued_tx_for_spawn,
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<...>`, found `Option<UnboundedSender<PublishEnqueued>>`
    |
    = note: expected enum `std::option::Option<DaemonWorkerLivePublishMaintenance<'_>>`
               found enum `std::option::Option<UnboundedSender<PublishEnqueued>>`
note: function defined here
   --> crates/tenex-daemon/src/daemon_worker_runtime.rs:854:8
    |
854 | pub fn run_started_worker_session_from_filesystem<S>(
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
861 |     live_publish_maintenance: Option<DaemonWorkerLivePublishMaintenance<'_>>,
    |     ------------------------------------------------------------------------

For more information about this error, try `rustc --explain E0308`.
warning: `tenex-daemon` (lib) generated 1 warning
error: could not compile `tenex-daemon` (lib) due to 1 previous error; 1 warning emitted
[harness] FATAL: daemon never wrote lockfile
[harness] cleanup (script exit code=1)
[harness] stopping daemon pid 60596 (SIGTERM)
[harness] stopping relay pid 60585
